syntax = "proto3";
package bringyour;

option go_package = "github.com/bringyour/connect/protocol";


message SimpleMessage {
    uint32 message_index = 1;
    uint32 message_count = 2;
    string content = 3;
}
